--- a/classes/20181027.md
+++ b/classes/20181027.md
@@ -2,3 +2,55 @@
 
 ## Matriz EFI
 
+### Factores internos claves
+
+## Matriz MPC (matriz del perfil competitivo)
+1. Defina los factores claves para el exito
+2. Asigne un valor a cada factor
+3. Defina las empresas a analizar
+4. Califique el desempeno de cada empresa
+5. Obtenga los puntajes totales de desempeno
+6. Defina su posicion competitiva
+
+## Matriz FODA
+- Se genera una matriz de 8 cuadrantes
+- Se debe seguir:
+
+1. Lista de fortalezas
+2. Lista de debilidades
+3. Lista de amenazas
+4. Lista de oportunidades
+5. Junte fortalezas oportunidades
+6. Junte debilidades oportunidades
+7. Junte fortalezas amenazas
+8. Junte debilidades amenazas
+
+- Con estos factores se debera idear una estrategia
+- Definir las estrategias a seguir
+- Existen 4 tipos: FO - FA - DO - DA
+
+## Matriz IE (matriz interna - externa)
+- Disenada para la torma decisiones de cartera de negocios
+- Esta es una matriz de nueva celdas
+
+## Matriz de la Gran Estrategia
+
+                CRECIMIENTO RAPIDO DEL MERCADO
+                              |
+                              |
+                              |
+        II cuadrante          |       I cuadrante
+                              |
+                              |
+                              |
+                              |
+POSICIONAMIENTO--------------------------------POSICIONAMIENTO
+COMPETITIVA                   |                COMPETITIVA
+DEBIL                         |                FUERTE                            
+                              |
+                              |
+        III cuadrante         |       IV cuadrante
+                              |
+                              |
+                              |
+                CRECIMIENTO LENTO DEL MERCADO
