Add experimental text

--- a/classes/20181027.md
+++ b/classes/20181027.md
@@ -35,6 +35,7 @@
 
 ## Matriz de la Gran Estrategia
 
+<pre>
                 CRECIMIENTO RAPIDO DEL MERCADO
                               |
                               |
@@ -54,3 +55,5 @@ DEBIL                         |                FUERTE
                               |
                               |
                 CRECIMIENTO LENTO DEL MERCADO
+</pre>
+
