Add recapitulando section

--- a/classes/20181027.md
+++ b/classes/20181027.md
@@ -57,3 +57,18 @@ DEBIL                         |                FUERTE
                 CRECIMIENTO LENTO DEL MERCADO
 </pre>
 
+
+## Matriz PEYEA
+- La matriz de la posicion estrategica y la evaluacion
+- Indica si una estrategia
+- Los ejes represetnan factores iternos y externos
+
+## Matriz MCPE (matriz cuantitativa de la planificacion estrategica)
+
+## Recapitulando
+- Las matrices IE, PEYEA y de la gran estrategia son las matrices de
+  comprobacion.
+- Ellas nos indican lo que la teroia nos indica que deberiamos realizar.
+- Los resultados de cada una de estas matrices deben estar relacionados
+  entre si.
+
